services/templates/serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mongo
spec:
  hosts:
    - mongodb.service
  addresses:
    - 192.168.0.6/32
  ports:
    - number: 27017
      name: tcp
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
    - address: 192.168.0.6
